--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,8 @@
 			<artifactId>primefaces</artifactId>
 			<version>6.2</version>
 		</dependency>
-		
-		
+
+
 
 		<!-- CDI -->
 		<dependency>
@@ -72,6 +72,13 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-servlet-api</artifactId>
+			<version>8.0.36</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 	<build>
